--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -54,9 +54,83 @@ table {
 strong {
   font-weight: bold; }
 
-/*.left{
-	text-align: left;
-}*/
+/*-----------╨б╤В╨╕╨╗╨╕ ╨┤╨╗╤П ╨С╨╗╨╛╨│╨░----------------------------------*/
+.col-md-offset-2 {
+  margin-bottom: 16px; }
+
+.ab-h1-blog {
+  margin-bottom: -15px; }
+
+.ab-author {
+  padding-top: 15px;
+  color: #788089; }
+
+/*----------------------------------------------------------------*/
+/*-----------╨Я╨╡╤А╨╡╨║╨╗╤О╤З╨░╤В╨╡╨╗╤М ╤П╨╖╤Л╨║╨░----------------------------------*/
+.ab-language {
+  float: right;
+  padding-top: 3px;
+  width: 65px;
+  position: relative;
+  z-index: 500; }
+  .ab-language #cur-lang {
+    width: 100%;
+    position: relative;
+    cursor: pointer; }
+  .ab-language #current {
+    padding-left: 10px; }
+    .ab-language #current .txt-box {
+      width: 70%; }
+  .ab-language #cur-lang:after {
+    position: absolute;
+    content: "";
+    width: 6px;
+    height: 3px;
+    background: url(./img/arr_down.png) no-repeat top center;
+    top: 10px;
+    right: 1px; }
+  .ab-language ul {
+    display: none;
+    width: 100%;
+    position: absolute;
+    padding-left: 10px;
+    padding-right: 25px;
+    padding-bottom: 5px; }
+    .ab-language ul li {
+      display: block;
+      cursor: pointer;
+      margin-top: 5px; }
+  .ab-language .lang-wrap {
+    display: table;
+    width: 100%; }
+    .ab-language .lang-wrap .img-box {
+      display: table-cell;
+      vertical-align: middle;
+      width: 27px; }
+      .ab-language .lang-wrap .img-box img {
+        display: inline-block; }
+    .ab-language .lang-wrap .txt-box {
+      display: table-cell;
+      vertical-align: middle;
+      width: 27px;
+      position: relative;
+      padding-left: 5px; }
+      .ab-language .lang-wrap .txt-box span {
+        display: inline-block;
+        position: absolute;
+        font-family: "Exo2-Medium";
+        font-size: 14px;
+        color: #fff;
+        text-transform: uppercase;
+        top: -0px; }
+
+select {
+  float: left;
+  background: url(./img/rus.png) no-repeat;
+  border: none;
+  width: 70px; }
+
+/*--------------------------------------------------------------*/
 h1 {
   color: #595959;
   font-family: "RobotoMedium";
@@ -121,8 +195,8 @@ textarea {
   display: inline-block;
   padding: 8px 15px;
   min-width: 145px;
-  background: #c93300;
-  border: 1px solid #FC4000;
+  background: #cc7400;
+  border: 1px solid #FF9100;
   font-family: "RobotoLight";
   font-size: 14px;
   color: #fff;
@@ -183,8 +257,8 @@ textarea {
 .button-2 {
   display: inline-block;
   padding: 5px 15px;
-  background: #c93300;
-  border: 1px solid #FC4000;
+  background: #cc7400;
+  border: 1px solid #FF9100;
   font-family: "RobotoLight";
   font-size: 14px;
   color: #fff;
@@ -194,7 +268,7 @@ textarea {
   text-transform: uppercase; }
 
 .button-2:hover {
-  background: #962600; }
+  background: #995700; }
 
 .button-3 {
   display: block;
@@ -239,7 +313,7 @@ textarea {
 .button-4 {
   display: inline-block;
   padding: 15px 40px;
-  background: #FC4000;
+  background: #FF9100;
   color: #fff;
   font-family: 'Open Sans', arial;
   font-size: 20px;
@@ -248,7 +322,7 @@ textarea {
   text-align: center; }
 
 .button-4:hover {
-  background: #962600;
+  background: #995700;
   color: #fff; }
 
 .button-5 {
@@ -256,7 +330,7 @@ textarea {
   padding: 0px 40px;
   height: 40px;
   line-height: 40px;
-  background: #FC4000;
+  background: #FF9100;
   color: #fff;
   font-family: 'Open Sans', arial;
   font-size: 16px;
@@ -273,7 +347,7 @@ textarea {
   /* prevents bg color from leaking outside the border */ }
 
 .button-5:hover {
-  background: #962600;
+  background: #995700;
   color: #fff; }
 
 .folio-more:hover {
@@ -384,6 +458,12 @@ video {
   left: 0%;
   padding-top: 18px; }
 
+.header-vn {
+  width: 100%;
+  z-index: 500;
+  background: #42433F;
+  padding: 18px 0px; }
+
 .burger-box {
   text-align: right;
   font-size: 32px; }
@@ -403,7 +483,7 @@ video {
       text-transform: uppercase;
       letter-spacing: 0.25; }
     .main-menu li a:hover {
-      color: #FC4000;
+      color: #FF9100;
       animation: menuhover-hover 350ms ease-in-out; }
 @keyframes menuhover-hover {
   0% {
@@ -411,7 +491,7 @@ video {
   50% {
     color: #fff; }
   100% {
-    color: #FC4000; } }
+    color: #FF9100; } }
     .main-menu li a:hover:after {
       position: absolute;
       content: "]";
@@ -419,7 +499,7 @@ video {
       top: -1px;
       height: 3px;
       animation: menuhover-after 350ms ease-in-out;
-      color: #FC4000;
+      color: #FF9100;
       font-weight: bold; }
     .main-menu li a:hover:before {
       position: absolute;
@@ -428,7 +508,7 @@ video {
       top: -1px;
       left: -7px;
       animation: menuhover-before 350ms ease-in-out;
-      color: #FC4000;
+      color: #FF9100;
       font-weight: bold; }
 @keyframes menuhover-after {
   0% {
@@ -449,7 +529,7 @@ video {
     opacity: 1;
     left: 0%; } }
   .main-menu .current-menu-item a {
-    color: #FC4000;
+    color: #FF9100;
     position: relative;
     font-weight: bold; }
   .main-menu .current-menu-item a:before {
@@ -457,7 +537,7 @@ video {
     content: "";
     width: 100%;
     height: 3px;
-    background: #FC4000;
+    background: #FF9100;
     bottom: -8px; }
 
 a.logo {
@@ -467,7 +547,7 @@ a.logo {
   font-size: 28px;
   text-transform: uppercase; }
   a.logo span {
-    color: #FC4000; }
+    color: #FF9100; }
 
 .header-middle {
   margin-top: 13%;
@@ -488,7 +568,9 @@ a.logo {
     width: 100%;
     height: auto; }
   .main-content p {
-    padding-bottom: 20px; }
+    padding-bottom: 20px;
+    line-height: 1.525em;
+    padding-top: 15px; }
 
 .home-page-portfolio {
   width: 100%;
@@ -686,7 +768,7 @@ a.logo {
     .service .service-block .icon-block {
       display: inline-block;
       font-size: 35px;
-      color: #FC4000;
+      color: #FF9100;
       margin-top: 10px; }
     .service .service-block .icon-block .fa {
       -webkit-transition-duration: 0.8s;
@@ -698,7 +780,7 @@ a.logo {
       -o-transition-property: -o-transform;
       transition-property: transform;
       overflow: hidden;
-      color: dareken(#FC4000, 5%); }
+      color: dareken(#FF9100, 5%); }
     .service .service-block .icon-block:hover .fa {
       -webkit-transform: rotate(360deg);
       -moz-transform: rotate(360deg);
@@ -957,14 +1039,14 @@ a.logo {
     width: 30px;
     height: 30px;
     border-radius: 10em;
-    background: #c93300;
+    background: #cc7400;
     font-size: 18px; }
     .testimonials .arrs i {
       display: block;
       margin: 0 auto;
       margin-top: 8px; }
   .testimonials .arrs:hover {
-    background: #ff6530; }
+    background: #ffa733; }
   .testimonials .next {
     position: absolute;
     top: 30%;
@@ -989,9 +1071,9 @@ a.logo {
     width: 17px;
     height: 17px;
     border-radius: 10em;
-    background: #c93300; }
+    background: #cc7400; }
   .testimonials .owl-dots .active {
-    background: #ff6530; }
+    background: #ffa733; }
 
 .order-service input[type="text"], .order-service textarea, .order-service select {
   display: block;
@@ -1097,7 +1179,7 @@ a.logo {
     .ocenka .ocenka_form input[type="submit"]:hover, .ocenka .zvonok_form input[type="submit"]:hover, .ocenka .tarif_form input[type="submit"]:hover, .ocenka .tarif-optima_form input[type="submit"]:hover, .ocenka .tarif-max_form input[type="submit"]:hover, .ocenka .tarif-standart_form input[type="submit"]:hover {
       width: 100%;
       margin-top: 10px;
-      background: #FC4000; }
+      background: #FF9100; }
   .ocenka .close {
     position: absolute;
     display: block;
@@ -1232,7 +1314,7 @@ a.logo {
     display: block; }
 
   .anz-menu-ch {
-    color: #FC4000;
+    color: #FF9100;
     cursor: pointer;
     position: absolute;
     right: 20px;
@@ -1262,7 +1344,7 @@ a.logo {
     display: block; }
     .main-menu li a {
       display: block;
-      color: #FC4000; }
+      color: #FF9100; }
     .main-menu li a:hover {
       animation: none !important;
       color: #fff; }
@@ -1296,7 +1378,7 @@ a.logo {
     display: table-cell;
     vertical-align: top; }
 
-  .left {
+  .ab-left {
     text-align: left !important;
     vertical-align: middle; }
 
