--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -3,7 +3,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-$accent: #FC4000;
+$accent: #FF9100;
 $gray: #42433F;
 $hover-percent: 20%;
 $page-padding: 50px 0px;
@@ -62,9 +62,111 @@ strong{
 	font-weight: bold;
 }
 
-/*.left{
-	text-align: left;
-}*/
+
+/*-----------Стили для Блога----------------------------------*/
+.col-md-offset-2 {
+	margin-bottom: 16px;
+}
+
+.ab-h1-blog {
+	margin-bottom: -15px;
+}
+
+.ab-author{
+	padding-top: 15px;
+	color: #788089;
+}
+/*----------------------------------------------------------------*/
+
+
+
+/*-----------Переключатель языка----------------------------------*/
+
+.ab-language {
+    float: right;
+    padding-top: 3px;
+    width: 65px;
+    position: relative;
+    z-index: 500;
+    #cur-lang{
+        width: 100%;
+        position: relative;
+        cursor: pointer;
+        //background: #000;
+    }
+    #current{
+        padding-left: 10px;
+        .txt-box{
+            width: 70%;
+        }
+    }
+    #cur-lang:after{
+        position: absolute;
+        content: "";
+        width: 6px;
+        height: 3px;
+        background: url(./img/arr_down.png) no-repeat top center;
+        top: 10px;
+        right: 1px;
+    }
+    #cur-lang:hover > ul.lang-switcher{
+        //display: block;
+    }
+    ul{
+        display: none;
+        width: 100%;
+        //background: #000;
+        position: absolute;
+        padding-left: 10px;
+        padding-right: 25px;
+        padding-bottom: 5px;
+        li{
+            display: block;
+            cursor: pointer;
+            margin-top: 5px;
+        }
+    }
+    .lang-wrap{
+        display: table;
+        width: 100%;
+        .img-box{
+            display: table-cell;
+            vertical-align: middle;
+            width: 27px;
+            img{
+                display: inline-block;
+            }
+        }
+        .txt-box{
+            display: table-cell;
+            vertical-align: middle;
+            width: 27px;
+            position: relative;
+            padding-left: 5px;
+            span{
+                display: inline-block;
+                position: absolute;
+                font-family: "Exo2-Medium";
+                font-size: 14px;
+                color: #fff;
+                text-transform: uppercase;
+                top: -0px;
+            }
+        }
+    }
+}
+
+select {
+  float: left;
+  background: url(./img/rus.png) no-repeat;
+  border: none;
+  width:70px; 
+
+}
+
+
+
+/*--------------------------------------------------------------*/
 
 h1{
 	color: darken(#999,25%);
@@ -384,6 +486,8 @@ textarea{
 	color: #fff;
 	position: relative;
 }
+
+
 video{
 	display: block;
 }
@@ -446,6 +550,13 @@ video{
 	
 }
 
+.header-vn{
+	width: 100%;
+	z-index: 500;
+	background: $gray;
+	
+	padding: 18px 0px;
+}
 .burger-box{
 	text-align: right;
 	font-size: 32px;
@@ -595,6 +706,8 @@ a.logo{
 	}
 	p{
 		padding-bottom: 20px;
+		line-height: 1.525em;
+		padding-top: 15px;
 	}
 }
 .home-page-portfolio{
@@ -1723,7 +1836,7 @@ a.logo{
 		
 	}
 
-	.left {
+	.ab-left {
 		text-align: left !important;
 		vertical-align: middle;
 	}
