--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -65,6 +65,9 @@ strong {
   padding-top: 15px;
   color: #788089; }
 
+.ab-metki {
+  padding-top: 0 !important; }
+
 /*----------------------------------------------------------------*/
 /*-----------╨Я╨╡╤А╨╡╨║╨╗╤О╤З╨░╤В╨╡╨╗╤М ╤П╨╖╤Л╨║╨░----------------------------------*/
 .ab-language {
