--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -76,6 +76,10 @@ strong{
 	padding-top: 15px;
 	color: #788089;
 }
+
+.ab-metki{
+	padding-top: 0 !important;
+}
 /*----------------------------------------------------------------*/
 
 
