--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -68,6 +68,23 @@ strong {
 .ab-metki {
   padding-top: 0 !important; }
 
+.ab-button-blog {
+  background: #fda34d none repeat scroll 0 0;
+  border: 1px solid #ff8400;
+  border-radius: 3px;
+  color: #fff;
+  display: inline-block;
+  font-family: Open Sans Condensed,sans-serif;
+  font-size: 13px !important;
+  line-height: 34px;
+  padding: 0 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-top: 20px; }
+
+.ab-button-blog:hover {
+  background-color: #FF9100; }
+
 /*----------------------------------------------------------------*/
 /*-----------╨Я╨╡╤А╨╡╨║╨╗╤О╤З╨░╤В╨╡╨╗╤М ╤П╨╖╤Л╨║╨░----------------------------------*/
 .ab-language {
