--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -64,6 +64,7 @@ strong{
 
 
 /*-----------Стили для Блога----------------------------------*/
+
 .col-md-offset-2 {
 	margin-bottom: 16px;
 }
@@ -80,6 +81,30 @@ strong{
 .ab-metki{
 	padding-top: 0 !important;
 }
+
+.ab-button-blog {
+	background: #fda34d none repeat scroll 0 0;
+    border: 1px solid #ff8400;
+    border-radius: 3px;
+    color: #fff;
+    display: inline-block;
+    font-family: Open Sans Condensed,sans-serif;
+    font-size: 13px !important;
+    line-height: 34px;
+    padding: 0 15px;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-top: 20px;
+    //width: 169px;
+    //height: 35px;
+    //margin: 0 auto;
+}
+
+
+.ab-button-blog:hover {
+	background-color: #FF9100;
+}
+
 /*----------------------------------------------------------------*/
 
 
