--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -60,6 +60,8 @@ strong {
 
 .ab-h1-blog {
   margin-bottom: -15px; }
+  .ab-h1-blog a {
+    color: #595959; }
 
 .ab-author {
   padding-top: 15px;
@@ -82,6 +84,23 @@ strong {
   text-transform: uppercase;
   margin-top: 20px; }
 
+.ab-button-blog-1 {
+  background: #ffa733;
+  border: 1px solid #ff8400;
+  border-radius: 3px;
+  color: #fff;
+  display: inline-block;
+  font-family: Open Sans Condensed,sans-serif;
+  font-size: 13px !important;
+  line-height: 34px;
+  padding: 0 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-top: 20px; }
+
+.ab-button-blog-1:hover {
+  background: #FF9100; }
+
 .ab-button-blog:hover {
   background-color: #FF9100; }
 
@@ -97,9 +116,9 @@ strong {
     width: 100%;
     position: relative;
     cursor: pointer; }
-  .ab-language #current {
+  .ab-language #current-lang {
     padding-left: 10px; }
-    .ab-language #current .txt-box {
+    .ab-language #current-lang .txt-box {
       width: 70%; }
   .ab-language #cur-lang:after {
     position: absolute;
