--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -64,7 +64,7 @@ strong{
 }
 
 
-/*-----------Стили для Блога----------------------------------*/
+/*----------- Стили для Блога (Аслан) 16.09.2016 ----------------------------------*/
 
 .col-md-offset-2 {
 	margin-bottom: 16px;
@@ -533,7 +533,7 @@ textarea{
 }
 
 .header {
-	//background: url(./img/header.jpg) top center;
+	background: url(./img/ab-fon.jpg) top center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	padding: $page-padding;
@@ -541,6 +541,15 @@ textarea{
 	position: relative;
 }
 
+.header:before{
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top:0 ;
+	background: rgba(0, 0, 0, 0.5); 
+}
 
 video{
 	display: block;
@@ -562,35 +571,6 @@ video{
   z-index: 100;
 }
 
-.video-block {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  
-  z-index: 1;
-  overflow:hidden;
-}
-
-.video-block .bgvideo {
-  width: 100%;
-  
-  height: auto;
-  position: relative;
-  z-index: 2;
-  overflow:hidden;
-}
-
-.video-block .overlay {
-  min-width: 100%;
-  min-height: 800px;
-  height: 100%;
-  position: absolute;
-  z-index: 4;
-  top: 0;
-  background: url(./img/greed_plus.png), rgba(66,67,63,0.5);
-}
 
 .header-fixed{
 	position: fixed;
@@ -599,7 +579,8 @@ video{
 	background: $gray;
 	top: 0px;
 	left: 0%;
-	padding-top: 18px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 	
 	
 }
