--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -1018,7 +1018,7 @@ a.logo {
   50% {
     border-color: cyan; }
   75% {
-    border-color: #8000ff; }
+    border-color: #7f00ff; }
   100% {
     border-color: red; } }
 @-webkit-keyframes pulse {
@@ -1033,7 +1033,7 @@ a.logo {
   50% {
     border-color: cyan; }
   75% {
-    border-color: #8000ff; }
+    border-color: #7f00ff; }
   100% {
     border-color: red; } }
 @keyframes pulse {
@@ -1462,6 +1462,10 @@ a.logo {
   .ab-button {
     margin-top: 10px; } }
 /* Medium Devices, Desktops */
+@media only screen and (min-width: 992px) {
+  .ab-tehnology-wrap {
+    width: 100%;
+    height: 100%; } }
 /* Large Devices, Wide Screens */
 
 /*# sourceMappingURL=style.css.map */
