--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -2006,8 +2006,11 @@ a.logo{
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
 
-
-
+.ab-tehnology-wrap{
+//background: url(./img/teh.svg);
+width: 100%;
+height: 100%;
+}
 
 
 
