--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -463,6 +463,7 @@ video {
   top: 0px;
   left: 0%;
   padding-top: 25px;
+  padding-bottom: 20px;
   color: #000; }
 
 .header .container {
@@ -1342,6 +1343,41 @@ a.logo {
   text-align: center; }
 
 /*---------------------------------------------------*/
+/*--------------╨С╨╗╨╛╨║ ╨в╨╡╤Е╨╜╨╛╨╗╨╛╨│╨╕╨╕ (╨Р╤Б╨╗╨░╨╜) 19.09.16 ----------------------*/
+.ab-tehnology-wrap {
+  width: 100%;
+  text-align: center !important; }
+
+.ab-tehnology-table {
+  width: 12,5%;
+  margin-bottom: 15px;
+  text-align: center; }
+  .ab-tehnology-table img {
+    display: block;
+    margin: 0 auto; }
+
+.ab-tehnology-wrap2 {
+  display: table;
+  margin: 0 auto;
+  width: 57%; }
+
+.ab-tehnology-table2 {
+  width: 33,3%;
+  margin-bottom: 15px;
+  text-align: center; }
+  .ab-tehnology-table2 img {
+    display: block;
+    margin: 0 auto; }
+
+/*---------------------------------------------------*/
+/*--------------╨С╨╗╨╛╨║ ╨Я╨╗╨░╤В╤Д╨╛╤А╨╝╤Л (╨Р╤Б╨╗╨░╨╜) 19.09.16 ----------------------*/
+.opencart-img img {
+  margin-top: 30px !important; }
+
+.ab-h2 h2 {
+  padding-top: 40px; }
+
+/*---------------------------------------------------*/
 /*==========  Desktop First Method  ==========*/
 /* Large Devices, Wide Screens */
 /* Medium Devices, Desktops */
@@ -1437,6 +1473,41 @@ a.logo {
 /* Extra Small Devices, Phones */
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
+  .ab-platforma {
+    width: 90% !important; }
+
+  .table3 {
+    padding-left: 30px; }
+
+  .opencart-img {
+    padding-left: 30px !important; }
+
+  /*--------------╨С╨╗╨╛╨║ ╤Б ╨в╨╡╤Е╨╜╨╛╨╗╨╛╨│╨╕╤П╨╝╨╕ (╨Р╤Б╨╗╨░╨╜) 19.09.16 ----------------------*/
+  .ab-tehnology-wrap {
+    margin: 0 auto;
+    width: 90%;
+    display: table;
+    margin-bottom: 20px; }
+
+  .ab-tehnology-table {
+    margin-bottom: 15px;
+    width: 12,5%;
+    display: table-cell;
+    vertical-align: middle; }
+
+  .ab-tehnology-wrap2 {
+    display: table;
+    margin: 0 auto;
+    width: 57%;
+    margin-top: 10px; }
+
+  .ab-tehnology-table2 {
+    margin-bottom: 15px;
+    width: 25% !important;
+    display: table-cell;
+    vertical-align: middle; }
+
+  /*---------------------------------------------------*/
   h1 {
     text-align: left !important; }
 
@@ -1462,10 +1533,6 @@ a.logo {
   .ab-button {
     margin-top: 10px; } }
 /* Medium Devices, Desktops */
-@media only screen and (min-width: 992px) {
-  .ab-tehnology-wrap {
-    width: 100%;
-    height: 100%; } }
 /* Large Devices, Wide Screens */
 
 /*# sourceMappingURL=style.css.map */
