--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -576,6 +576,7 @@ video{
 	left: 0%;
 	//padding: 25px 0px;
 	padding-top: 25px;
+	padding-bottom: 20px;
 	color: #000;
 }
 .header .container {
@@ -1727,6 +1728,59 @@ a.logo{
 
 /*---------------------------------------------------*/
 
+
+/*--------------Блок Технологии (Аслан) 19.09.16 ----------------------*/
+
+.ab-tehnology-wrap{
+	width: 100%;
+	text-align: center !important;
+}
+
+.ab-tehnology-table{
+	width: 12,5%;
+	margin-bottom: 15px;
+	text-align: center;
+		img{
+			display: block;
+			margin: 0 auto; 
+		}
+	
+}
+
+.ab-tehnology-wrap2{
+	display: table;
+    margin: 0 auto;
+    width: 57%;
+}
+
+.ab-tehnology-table2{
+	width: 33,3%;
+	margin-bottom: 15px;
+	text-align: center;
+		img{
+			display: block;
+			margin: 0 auto; 
+		}
+}
+/*---------------------------------------------------*/
+
+
+/*--------------Блок Платформы (Аслан) 19.09.16 ----------------------*/
+.opencart-img{
+	img {
+	margin-top: 30px !important;
+	}
+}
+
+.ab-h2{
+	h2{
+		padding-top: 40px;
+	}
+}
+
+
+/*---------------------------------------------------*/
+
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12{
   //padding: 0px;
   // margin: 0px;
@@ -1965,6 +2019,59 @@ a.logo{
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
 
+
+.ab-platforma{
+	width: 90% !important;
+}
+
+.table3 {
+	padding-left: 30px;
+}
+
+.opencart-img{
+	padding-left: 30px !important;
+}
+
+/*--------------Блок с Технологиями (Аслан) 19.09.16 ----------------------*/
+
+.ab-tehnology-wrap{
+	margin: 0 auto;
+    width: 90%;
+	display: table;
+	margin-bottom: 20px;
+	
+}
+
+.ab-tehnology-table{
+	margin-bottom: 15px;
+	width: 12,5%;
+	display: table-cell;
+	vertical-align: middle;
+	
+	
+}
+
+.ab-tehnology-wrap2{
+	display: table;
+    margin: 0 auto;
+    width: 57%;
+	margin-top: 10px;
+	
+}
+
+.ab-tehnology-table2{
+	margin-bottom: 15px;
+	width: 25% !important;
+	display: table-cell;
+	vertical-align: middle;
+	
+	
+}
+
+
+
+/*---------------------------------------------------*/
+
 	h1{
 		text-align: left !important;
 	}
@@ -2005,22 +2112,6 @@ a.logo{
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
-
-.ab-tehnology-wrap{
-//background: url(./img/teh.svg);
-width: 100%;
-height: 100%;
-}
-
-
-
-
-
-
-
-
-
-
 
 }
  /* Large Devices, Wide Screens */
