--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -455,9 +455,10 @@ textarea{
 }
 .button-3:hover{
 	background: none;
-
 	
 }
+
+
 .folio-more{
 	display: block;
 	width: 130px;
@@ -594,7 +595,18 @@ video{
 }
 .header-top-up{
 	background: rgba(#000, 0.2);
-	padding: 5px 0px;
+	//background: #5F054E;
+	padding: 12px 0px;
+	text-align: center;
+	.ab-phone{
+		padding-bottom: 10px;
+	}
+	.button-3{
+		margin-bottom: 10px;
+	}
+}
+.header-top-down{
+	padding: 8px 0px;
 }
 .burger-box{
 	text-align: right;
@@ -1435,6 +1447,15 @@ a.logo{
 		font-weight: bold;
 		margin-bottom: 15px;
 	}
+	.button-3{
+		padding: 10px 20px; 
+	}
+	.button-3:hover{
+		background: #9D1857;
+	}
+	.slide-button-wrap{
+		text-align: center;
+	}
 	.arrs{
 	    display: block;
 	    text-align: center;
@@ -1471,7 +1492,7 @@ a.logo{
 	    	margin-left: -3px;
 	    }
 	}
-	.owl-dots{
+	/*.owl-dots{
 		text-align: center;
 		position: absolute;
 		left: 50%;
@@ -1489,7 +1510,7 @@ a.logo{
 	}
 	.owl-dots .active{
 		background: lighten($accent, 10%);
-	}
+	}*/
 
 }
 
@@ -1627,6 +1648,10 @@ input, textarea{
         text-align: center;
         border: none;
         cursor: pointer;
+    }
+    .button-1:hover{
+    	background: #8B1857;
+
     }
 }
 
@@ -1968,7 +1993,6 @@ input, textarea{
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
 
-
 .ab-platforma{
 	width: 90% !important;
 }
@@ -2061,6 +2085,20 @@ input, textarea{
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
+	.header-top-up{ 
+		padding: 3px 0;
+		.button-3{
+		margin-top: 10px;
+	}
+	.ab-phone{
+	text-align: left;
+	margin-top: 13px; 
+	}
+	.ab-right{
+		text-align: right;
+		margin-top: 13px;
+	}
+}
 	.common-form{
         width: 378px;
         .close{
