--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -590,8 +590,7 @@ video{
 	width: 100%;
 	z-index: 500;
 	background: $gray;
-	
-	padding: 18px 0px;
+	//padding: 18px 0px;
 }
 .header-top-up{
 	background: rgba(#000, 0.2);
@@ -600,6 +599,7 @@ video{
 	text-align: center;
 	.ab-phone{
 		padding-bottom: 10px;
+		color: white;
 	}
 	.button-3{
 		margin-bottom: 10px;
@@ -1752,6 +1752,9 @@ input, textarea{
 	}
 }
 
+.ab-right{
+		color: white;
+	}
 
 /*---------------------------------------------------*/
 
@@ -2093,10 +2096,12 @@ input, textarea{
 	.ab-phone{
 	text-align: left;
 	margin-top: 13px; 
+	color: white;
 	}
 	.ab-right{
 		text-align: right;
 		margin-top: 13px;
+		color: white;
 	}
 }
 	.common-form{
