--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -922,7 +922,8 @@ a.logo {
   color: #fff;
   background: #2f0226; }
   .footer .copyright {
-    display: inline-block; }
+    display: inline-block;
+    padding-top: 10px; }
 
 .soc {
   margin: 0 auto;
@@ -995,7 +996,7 @@ a.logo {
   50% {
     border-color: cyan; }
   75% {
-    border-color: #8000ff; }
+    border-color: #7f00ff; }
   100% {
     border-color: red; } }
 @-webkit-keyframes pulse {
@@ -1010,7 +1011,7 @@ a.logo {
   50% {
     border-color: cyan; }
   75% {
-    border-color: #8000ff; }
+    border-color: #7f00ff; }
   100% {
     border-color: red; } }
 @keyframes pulse {
@@ -1066,7 +1067,8 @@ a.logo {
   width: 100%;
   padding: 50px 0px;
   position: relative;
-  background: transparent;
+  background: url(./img/avd2.jpg);
+  background-size: cover;
   text-align: center;
   color: #fff;
   text-shadow: #fff 0px 0px 0,  #333 1px 1px 0; }
@@ -1340,6 +1342,51 @@ input, textarea {
 
 .ab-right {
   color: white; }
+
+/*---------------------------------------------------*/
+/********* ╨б╤В╤А╨░╨╜╨╕╤Ж╨░ ╤Б ╨С╤А╨╕╤Д╨╛╨╝ (╨Р╤Б╨╗╨░╨╜) ╨╛╤В 20.09.16 *********/
+#brief .left {
+  color: #000;
+  font-size: 18px;
+  padding-right: 7%;
+  width: 31%; }
+
+#brief td {
+  padding-bottom: 23px;
+  vertical-align: top; }
+
+#brief td .input-text {
+  border: 1px solid #a7a7a7;
+  height: 28px;
+  line-height: 26px;
+  width: 62%; }
+
+#brief td textarea {
+  border: 1px solid #a7a7a7;
+  height: 136px;
+  width: 100%; }
+
+#brief .left .comment {
+  color: #868686;
+  font-family: Arial;
+  font-size: 12px;
+  font-style: italic; }
+
+#brief td .checkbox {
+  padding-bottom: 8px;
+  color: grey; }
+
+#brief td .input-text.short {
+  width: 40px; }
+
+#brief .brief_age td {
+  line-height: 28px; }
+
+#brief .brief_age {
+  width: 50%; }
+
+#brief .button-1:hover {
+  background: #9D1857; }
 
 /*---------------------------------------------------*/
 /*==========  Desktop First Method  ==========*/
